Specifically indicates that None is No Filter.

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <h1>Search</h1>
     <div id="inp">
       <select onchange="search()">
-        <option value="">None</option>
+        <option value="">No Filter</option>
         <option>Pacific-Northwest-Coast-Landscape-Conservation-Design_June15-1</option>
         <option>CCLC-Targets-KEAs-Spatial-Design-Criteria-8-4-17-1</option>
         <option>WORKING LANDS AND CONSERVATION COMMUNITY MEETING_Chehalis_2Nov2018</option>
