--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   <body>
     <h1>Question & Answer</h1>
     <div id="inp">
-      <select onchange="search()">
+      <select id="filter" onchange="search()">
         <option value="">No Filter</option>
         <option>Pacific-Northwest-Coast-Landscape-Conservation-Design_June15-1</option>
         <option>CCLC-Targets-KEAs-Spatial-Design-Criteria-8-4-17-1</option>
