--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       h1 {
           font-family: cursive;
       }
+      #chart {
+        height: 600px;
+      }
       #inp {
           display: flex;
           flex-flow: column;
@@ -128,7 +131,17 @@
       </select>
       <input id="q" onkeypress="return search()" onchange="search()">
     </div>
+    <div id="chart" ></div>
     <div id="result">
     </div>
   </body>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts-gl/dist/echarts-gl.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts-stat/dist/ecStat.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/extension/dataTool.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/map/js/china.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/map/js/world.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/extension/bmap.min.js"></script>
+  <script type="text/javascript" src="questions.js"></script>
+  <script type="text/javascript" src="visualizeData.js"></script>
 </html>
