Move loading to top.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <title>Search</title>
     <script src="axios.min.js"></script>
     <script type="text/javascript" src="hilitor.js"></script>
+    <script type="text/javascript" src="echarts.min.js"></script>
+
+    <script type="text/javascript" src="questions.js"></script>
+
+    <script type="text/javascript" src="visualizeData.js"></script>
     <script type="text/javascript" src="main.js"></script>
     <style>
       * {
@@ -135,13 +140,4 @@
     <div id="result">
     </div>
   </body>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts-gl/dist/echarts-gl.min.js"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts-stat/dist/ecStat.min.js"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/extension/dataTool.min.js"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/map/js/china.js"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/map/js/world.js"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/extension/bmap.min.js"></script>
-  <script type="text/javascript" src="questions.js"></script>
-  <script type="text/javascript" src="visualizeData.js"></script>
 </html>
