Use a flex height px instead of a fixed.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           font-family: cursive;
       }
       #chart {
-        height: 600px;
+        height: 70vh;
       }
       #inp {
           display: flex;
