--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
       h1 {
           font-family: cursive;
       }
+      .hide {
+          display: none;
+      }
       #chart {
-        height: 70vh;
+        height: 75vh;
       }
       #inp {
           display: flex;
@@ -126,7 +129,7 @@
   <body>
     <h1>Question & Answer</h1>
     <div id="inp">
-      <select id="filter" onchange="search()">
+      <select id="filter" onchange="search()", class="hide">
         <option value="">No Filter</option>
         <option>Pacific-Northwest-Coast-Landscape-Conservation-Design_June15-1</option>
         <option>CCLC-Targets-KEAs-Spatial-Design-Criteria-8-4-17-1</option>
