--- a/index.html
+++ b/index.html
@@ -124,6 +124,29 @@
       #result > div > div > article {
           padding: 5px 10px;
       }
+
+      #up {
+          position: fixed;
+          bottom: 5vh;
+          box-shadow: 0 0 3px 1px #666;
+          padding: 5px 10px;
+          text-align: center;
+          border-radius: 100%;
+          opacity: 0.5;
+          right: 15vh;
+      }
+      #up:hover {
+          box-shadow: 0 0 3px 3px #666;
+          background-color: #eee;
+          opacity: 0.8;
+      }
+      #up > a {
+          text-decoration: none;
+          opacity: 0.5;
+      }
+      #up > a:hover {
+          opacity: 0.8;
+      }
     </style>
   </head>
   <body>
@@ -137,10 +160,11 @@
         <option>CONSERVATIONANDWORKINGLANDSCAPES_Warrentonv3_26March2019</option>
         <option>PlanningToolsAssessment2019</option>
       </select>
-      <input id="q" onkeypress="return search()" onchange="search()">
+      <input id="q" onkeypress="return search()" onchange="search()" placeholder="search text">
     </div>
     <div id="chart" ></div>
     <div id="result">
     </div>
+    <div id="up"><a href="#">^</a></div>
   </body>
 </html>
