Add offline version.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Search</title>
-    <script src="axios.min.js"></script>
+    <script type="text/javascript" src="ans.js"></script>
     <script type="text/javascript" src="hilitor.js"></script>
     <script type="text/javascript" src="echarts.min.js"></script>
 
