--- a/water-map.html
+++ b/water-map.html
@@ -87,9 +87,9 @@
 </div>
 
 
-<script src="map_data/bioData_geo.js"></script>
+<script src="map_data/water_geo.js"></script>
 <script src="libs/v6.1.1-dist/ol.js"></script>
-<script src="map_data/map-bio.js"></script>
+<script src="map_data/map-water.js"></script>
 
 
 </body>
