add the Change function

--- a/index.html
+++ b/index.html
@@ -243,6 +243,13 @@
       </select>
       <input id="q" onkeypress="return search()" onchange="search()" placeholder="search text">
     </div>
+  <div>
+   <select id="Choose_question" class="Domain_question" onchange="load_visualize()">
+     <option value="">Select the question</option>
+     <option value="Wq"> Water Quality Question</option>
+     <option value="Bio">Bio Diversity Question</option>
+   </select>
+  </div>
     <div id="chart" ></div>
     <div id="result">
     </div>
