--- a/index.html
+++ b/index.html
@@ -158,84 +158,17 @@
       }
 
 
-      .map {
-        width: 100%;
-        height:600px;
-       }
-      .ol-popup
-      {
-        position: absolute;
-        background-color: white;
-        -webkit-filter: drop-shadow(0 1px 4px rgba(0,0,0,0.2));
-        filter: drop-shadow(0 1px 4px rgba(0,0,0,0.2));
-        padding: 15px;
-        border-radius: 10px;
-        border: 1px solid #cccccc;
-        bottom: 12px;
-        left: -50px;
-      }
-
-      .ol-popup:after, .ol-popup:before
-      {
-        top: 100%;
-        border: solid transparent;
-        content: " ";
-        height: 0;
-        width: 0;
-        position: absolute;
-        pointer-events: none;
-      }
-
-      .ol-popup:after
-      {
-        border-top-color: white;
-        border-width: 10px;
-        left: 48px;
-        margin-left: -10px;
-      }
-
-      .ol-popup:before
-      {
-        border-top-color: #cccccc;
-        border-width: 11px;
-        left: 48px;
-        margin-left: -11px;
-      }
-
-      .ol-popup-closer
-      {
-        text-decoration: none;
-        position: absolute;
-        top: 2px;
-        right: 8px;
-      }
-
-      .ol-popup-closer:after
-      {
-        content: "✖";
-        height:30px;
-        padding:12px;
-      }
-
-      #popup-content
-      {
-        font-size: 14px;
-      }
-
-      #popup-content .markerInfo
-      {
-        font-weight: bold;
-      }
+      
     </style>
   </head>
   <body>
     <h1>Question & Answer</h1>
-    <select id ="select_map" onchange="map_visualize()">
+    <select id ="select_map" onchange="Open_newPage()">
       <option value="">Choose map</option>
       <option value="water_map">Water Quality Map</option>
       <option value="bio_map">Bio Diversity Map</option>
     </select>
-    <div id ="js-map" class="map">
+    <!--<div id ="js-map" class="map">-->
     <!-- Popup -->
     <div id="popup" class="ol-popup">
       <a href="#" id="popup-closer" class="ol-popup-closer"></a>
