--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="map_data/bioData_geo.js"></script>
     <script src="libs/v6.1.1-dist/ol.js"></script>
     <script src="map_data/map-visualize.js"></script>
+    <script src="questions/download_file/download_function.js"></script>
     <link rel="stylesheet" href="libs/v6.1.1-dist/ol.css">
     <style>
       * {
@@ -156,9 +157,25 @@
       #up > a:hover {
           opacity: 0.8;
       }
+      .question_option{
+        display: flex;
+        align-items: center;
+        padding: 0px;
+        margin: 0 ;
+        box-shadow: none;
+      }
+      #download{
+        padding-left: 5px;
+        margin-left: 10px;
+      }
+      #download_button{
+        padding-left: 10px;
+        margin-left: 10px;
+      }
 
 
-      
+
+
     </style>
   </head>
   <body>
@@ -186,14 +203,22 @@
       </select>
       <input id="q" onkeypress="return search()" onchange="search()" placeholder="search text">
     </div>
-  <div>
-    <select id="Domain" class="Domain_question"  onchange="load_visualize()">
-      <option value="">Choose</option>
-      <option value="wqb"> Water Quality(Bert)</option>
-      <option value="wqg">Water Quality(Glove)</option>
-      <option value="adqb">All Domain Questions(Bow)</option>
-      <option value="adqt">All Domain Questions(TFIDF)</option>
+  <div class="question_option">
+    <select id="Domain"  onchange="load_visualize()">
+      <option value="">Choose Model</option>
+      <option value="wqb"> All Questions(Bert)</option>
+      <option value="wqg">All Questions(Glove)</option>
+      <option value="adqb">All Questions(Bow)</option>
+      <option value="adqt">All Questions(TFIDF)</option>
     </select>
+    <select id="download" >
+      <option value="">Choose Download File</option>
+      <option value="bert">Bert</option>
+      <option value="glove">Glove</option>
+      <option value="bow">Bow</option>
+      <option value="tfidf">TFIDF</option>
+    </select>
+    <input type="submit" onclick="download_file()" value="Download" id ='download_button'>
   </div>
     <div id="chart" ></div>
     <div id="result">
