--- a/index.html
+++ b/index.html
@@ -164,6 +164,9 @@
         margin: 0 ;
         box-shadow: none;
       }
+      #Domain{
+        margin-left: 10px;
+      }
       #download{
         padding-left: 5px;
         margin-left: 10px;
@@ -171,6 +174,24 @@
       #download_button{
         padding-left: 10px;
         margin-left: 10px;
+      }
+      .tool_div{
+        white-space:normal;
+        word-wrap:break-word;
+        width: 15em;
+        height: auto;
+      }
+      .choose_map ul{
+        margin:0;
+        padding:0;
+      }
+      .choose_map li:first-child{
+        float:left;
+        margin-left: 15px;
+      }
+      .choose_map li:nth-child(2){
+        float:left;
+        margin-left: 30px;
       }
 
 
@@ -180,11 +201,12 @@
   </head>
   <body>
     <h1>Question & Answer</h1>
-    <select id ="select_map" onchange="Open_newPage()">
-      <option value="">Choose map</option>
-      <option value="water_map">Water Quality Map</option>
-      <option value="bio_map">Bio Diversity Map</option>
-    </select>
+    <div class = 'choose_map'>
+       <ul>
+         <li><a href="bio-map.html" target="_blank">Map Bio Data</a></li>
+         <li><a href="water-map.html" target="_blank">Map Water_quality Data</a></li>
+       </ul>
+    </div>
     <!--<div id ="js-map" class="map">-->
     <!-- Popup -->
     <div id="popup" class="ol-popup">
@@ -204,15 +226,15 @@
       <input id="q" onkeypress="return search()" onchange="search()" placeholder="search text">
     </div>
   <div class="question_option">
+    <label for="Domain">Choose Model: </label>
     <select id="Domain"  onchange="load_visualize()">
-      <option value="">Choose Model</option>
+      <option value="adqb">All Questions(Bow)</option>
       <option value="wqb"> All Questions(Bert)</option>
       <option value="wqg">All Questions(Glove)</option>
-      <option value="adqb">All Questions(Bow)</option>
       <option value="adqt">All Questions(TFIDF)</option>
     </select>
     <select id="download" >
-      <option value="">Choose Download File</option>
+      <option value="">Download File</option>
       <option value="bert">Bert</option>
       <option value="glove">Glove</option>
       <option value="bow">Bow</option>
