--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Search</title>
     <script src="axios.min.js"></script>
+    <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="hilitor.js"></script>
     <script type="text/javascript" src="echarts.min.js"></script>
     <script type="text/javascript" src="questions/questions_bert.js"></script>
@@ -258,10 +259,10 @@
       <input id="q" onkeypress="return search()" onchange="search()" placeholder="search text">
     </div>
     <form  class="for_stop_word"  onclick="check_stop_word()">
-      <input type="radio" name="sw" id="s_open" value="open" checked="true" class="stop_word" >
-      <label for="s_open">Open stop word</label>
-      <input type="radio" name="sw" id="s_close" value="close" class="stop_word" >
-      <label for="s_close">Close stop word</label>
+      <input type="radio" name="sw" id="s_close"  checked="true" class="stop_word" >
+      <label for="s_close">Without stop word</label>
+      <input type="radio" name="sw" id="s_open"   class="stop_word" >
+      <label for="s_open">With stop word</label>
     </form>
   <div class="question_option">
     <label for="Domain">Choose Model: </label>
