change the style

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           background-color: #333;
           font-family: Optima;
       }
+
       body {
           display: flex;
           flex-flow: column;
@@ -172,9 +173,11 @@
       }
       #Domain{
         margin-left: 15px;
+        padding-top: 4px;
       }
       #download{
         margin-left: 15px;
+        padding-top: 4px;
       }
       #download_button{
         margin-left: 15px;
