change the style

--- a/index.html
+++ b/index.html
@@ -172,9 +172,11 @@
       }
       #Domain{
         margin-left: 15px;
+        padding-top: 4px;
       }
       #download{
         margin-left: 15px;
+        padding-top: 4px;
       }
       #download_button{
         margin-left: 15px;
