--- a/index.html
+++ b/index.html
@@ -16,225 +16,9 @@
     <script src="map_data/map-visualize.js"></script>
     <script src="questions/download_file/download_function.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="libs/v6.1.1-dist/ol.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <style>
-      * {
-          transition: all 0.5s ease-out;
-      }
-      html {
-          background-color: #333;
-          font-family: Optima;
-      }
-
-      body {
-          display: flex;
-          flex-flow: column;
-          max-width: 720px;
-          margin: auto;
-          padding: 10px 40px;
-          box-shadow: 0 0 5px 0 black;
-          background: white;
-      }
-      h1 {
-          font-family: cursive;
-
-      }
-      .top_box{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        box-shadow: 0px 1px #333333;
-      }
-
-      .hide {
-          display: none;
-      }
-      #chart {
-        height: 75vh;
-      }
-      #inp {
-          display: flex;
-          flex-flow: column;
-      }
-      #inp > * {
-          margin: 10px 0;
-      }
-      #hli{
-        font-size: 1rem;
-        font-family: Optima;
-      }
-
-      select, input {
-          height: 2rem;
-          font-size: 1rem;
-          font-family: Optima;
-          background: white;
-          border: none;
-          box-shadow: 0 1px 3px #666;
-          border-radius: 3px;
-          padding: 10px;
-      }
-      select:hover, input:hover {
-          background-color: #eee;
-          box-shadow: 0 1px 3px #666;
-      }
-
-      article {
-          display: flex;
-          flex-flow: column;
-          align-items: flex-start;
-      }
-
-      section {
-          display: flex;
-          border-bottom: 2px solid black;
-      }
-
-      button {
-          font-size: 1rem;
-          font-family: Optima;
-          border: none;
-      }
-
-      .rate {
-          display: flex;
-          align-items: center;
-          padding: 0 5px;
-          margin: 0 5px;
-          box-shadow: none;
-      }
-      .rate:first-child {
-          padding-left: 0;
-          margin-left: 0;
-      }
-      .rate-c:hover {
-          background-color: #eee;
-          box-shadow: 0 1px 3px #666;
-      }
-
-      #result > header {
-          margin: 10px 0;
-          box-shadow: 0 1px 3px #666;
-          padding: 0 5px;
-          border-radius: 3px;
-      }
-      #result > header:hover {
-          box-shadow: 0 1px 7px #666;
-      }
-      #result > div > div {
-          box-shadow: 0 1px 3px #333;
-          padding: 5px 0;
-          margin: 15px 0;
-          border-radius: 3px;
-      }
-      #result > div > div:hover {
-          box-shadow: 0 1px 7px #333;
-      }
-      #result > div > div > header {
-          background: #eee;
-          padding: 5px 5px;
-      }
-      #result > div > div > header > h2 {
-          font-size: 1rem;
-          margin: 0;
-      }
-      #result > div > div > article {
-          padding: 5px 10px;
-      }
-
-      #up {
-          position: fixed;
-          bottom: 5vh;
-          box-shadow: 0 0 3px 1px #666;
-          padding: 5px 10px;
-          text-align: center;
-          border-radius: 100%;
-          opacity: 0.5;
-          right: 15vh;
-      }
-      #up:hover {
-          box-shadow: 0 0 3px 3px #666;
-          background-color: #eee;
-          opacity: 0.8;
-      }
-      #up > a {
-          text-decoration: none;
-          opacity: 0.5;
-      }
-      #up > a:hover {
-          opacity: 0.8;
-      }
-      .question_option{
-        display: flex;
-        align-items: center;
-        justify-content: flex-start ;
-        /*padding: 0px;*/
-        /*margin: 0 ;*/
-        /*box-shadow: none;*/
-      }
-      #Domain{
-        margin-left: 15px;
-        padding-top: 4px;
-      }
-      #download{
-        margin-left: 15px;
-        padding-top: 4px;
-      }
-      #download_button{
-        margin-left: 15px;
-        padding-top: 6px;
-      }
-      .tool_div{
-        white-space:normal;
-        word-wrap:break-word;
-        width: 15em;
-        height: auto;
-      }
-
-
-      .for_stop_word input{
-        display: none;
-        margin-top: 10px;
-      }
-      .for_stop_word label{
-        box-sizing: border-box;
-        position: relative;
-        margin-right: 34px;
-        margin-top: 10px;
-      }
-      .for_stop_word label::before{
-        display: inline-block;
-        content: "";
-        width: 16px;
-        height: 16px;
-        border-radius: 50%;
-        border: 1px solid rgb(219, 219, 219);
-        margin-right: 6px;
-        vertical-align: bottom;
-      }
-      .for_stop_word input:checked+label::before{
-        border: 1px solid #fff;
-        background-color: #fff;
-      }
-      .for_stop_word input:checked+label::after{
-        display: inline-block;
-        content: "";
-        width: 18px;
-        height: 18px;
-        border-radius: 50%;
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        background-color: #66B3FF;
-      }
-
-      .for_stop_word{
-        display: none;
-      }
-
-
-    </style>
   </head>
   <body>
     <dix class = 'top_box'>
