--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
     </div>
     <div id="chart" ></div>
     <div class="question_option">
-      <label for="Domain">Choose Model: </label>
+      <label for="Domain">Choose Model to</label>
+      <input type="submit" onclick="download_file()" value="Download" id ='download_button'>
       <select id="Domain"  onchange="load_visualize()">
         <option value="adqb">All Questions(Bow)</option>
         <option value="wqb"> All Questions(Bert)</option>
@@ -54,7 +55,6 @@
         <option value="bow">Bow</option>
         <option value="tfidf">TFIDF</option>
       </select>
-      <input type="submit" onclick="download_file()" value="Download" id ='download_button'>
     </div>
     <div id="inp">
       <select id="filter" onchange="search()" , class="hide">
