--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
     <script src="libs/v6.1.1-dist/ol.js"></script>
     <script src="map_data/map-visualize.js"></script>
     <script src="questions/download_file/download_function.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="libs/v6.1.1-dist/ol.css">
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
     <dix class = 'top_box'>
@@ -76,5 +74,11 @@
     <div id="result">
     </div>
     <div id="up"><a href="#">^</a></div>
+
+    <link rel="stylesheet" href="https://unpkg.com/aos/dist/aos.css" />
+    <script src="https://unpkg.com/aos/dist/aos.js"></script>
+    <script>
+      AOS.init()
+    </script>
   </body>
 </html>
